--- a/spec/fixtures/notion/create_page.yml
+++ b/spec/fixtures/notion/create_page.yml
@@ -5,16 +5,18 @@ http_interactions:
     uri: https://api.notion.com/v1/pages
     body:
       encoding: UTF-8
-      string: '{"parent":{"database_id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c"},"properties":{"Name":[{"text":{"content":"Another
-        Notion page"}}]},"children":[{"object":"block","type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"A
+      string: '{"parent":{"database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"properties":{"Name":{"title":[{"text":{"content":"Another
+        Notion page"}}]},"Description":{"rich_text":[{"text":{"content":"Page description"}}]}},"children":[{"object":"block","type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"A
         heading"}}]}}]}'
     headers:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Notion Ruby Client/0.0.4
+      - Notion Ruby Client/0.0.7
       Authorization:
       - Bearer <NOTION_API_TOKEN>
+      Notion-Version:
+      - '2021-05-13'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -25,18 +27,13 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 25 Apr 2021 21:00:05 GMT
+      - Tue, 27 Jul 2021 10:39:49 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Set-Cookie:
-      - __cfduid=d7d668416316cb8c5e07208d366ff04e41619384404; expires=Tue, 25-May-21
-        21:00:04 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=9fd03492-d88e-4997-9345-b510ed98532b; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:46:44 GMT; Secure
       X-Dns-Prefetch-Control:
       - 'off'
       X-Frame-Options:
@@ -55,19 +52,21 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
@@ -76,19 +75,21 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
@@ -97,41 +98,46 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
         media-src https: http:'
+      Set-Cookie:
+      - notion_browser_id=fc5cd959-578d-4b01-a5cf-180c1a6b9cdb; Domain=www.notion.so;
+        Path=/; Expires=Fri, 04 Apr 2053 12:26:29 GMT; Secure
       Etag:
-      - W/"220-tcSO/BCA8Fy0EqVauv7sahl9s/c"
+      - W/"391-afZwyKyZUA0Pe61oRFOZ3yzUE50"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
       - DYNAMIC
-      Cf-Request-Id:
-      - '09ac6e2119000032b946349000000001'
       Expect-Ct:
       - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
       Server:
       - cloudflare
       Cf-Ray:
-      - 645a7fae8c7032b9-CDG
+      - 67553efbed45ae55-KIX
     body:
       encoding: UTF-8
-      string: '{"object":"page","id":"a92a670d-72e1-4db6-b07e-0859d2058759","created_time":"2021-04-25T21:00:04.819Z","last_edited_time":"2021-04-25T21:00:04.820Z","parent":{"type":"database_id","database_id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c"},"archived":false,"properties":{"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Another
+      string: '{"object":"page","id":"567dca6c-3c0c-4888-bc78-10b596bced02","created_time":"2021-07-27T10:39:00.000Z","last_edited_time":"2021-07-27T10:39:00.000Z","parent":{"type":"database_id","database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"archived":false,"properties":{"Description":{"id":"ddNO","type":"rich_text","rich_text":[{"type":"text","text":{"content":"Page
+        description","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Page
+        description","href":null}]},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"Another
         Notion page","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
-        Notion page","href":null}]}}}'
-  recorded_at: Sun, 25 Apr 2021 21:00:04 GMT
+        Notion page","href":null}]}},"url":"https://www.notion.so/Another-Notion-page-567dca6c3c0c4888bc7810b596bced02"}'
+  recorded_at: Tue, 27 Jul 2021 10:39:49 GMT
 recorded_with: VCR 6.0.0
