--- a/spec/fixtures/notion/update_page.yml
+++ b/spec/fixtures/notion/update_page.yml
@@ -2,18 +2,20 @@
 http_interactions:
 - request:
     method: patch
-    uri: https://api.notion.com/v1/pages/723578f1-6e51-450c-8ee1-09158c19fd4c
+    uri: https://api.notion.com/v1/pages/2de466f0-9861-466b-9bc2-c987965da010
     body:
       encoding: UTF-8
-      string: '{"id":"723578f1-6e51-450c-8ee1-09158c19fd4c","properties":{"Name":[{"text":{"content":"A
+      string: '{"id":"2de466f0-9861-466b-9bc2-c987965da010","properties":{"Name":[{"text":{"content":"A
         Notion page"}}]}}'
     headers:
       Accept:
       - application/json; charset=utf-8
       User-Agent:
-      - Notion Ruby Client/0.0.4
+      - Notion Ruby Client/0.0.7
       Authorization:
       - Bearer <NOTION_API_TOKEN>
+      Notion-Version:
+      - '2021-05-13'
       Content-Type:
       - application/json
       Accept-Encoding:
@@ -24,18 +26,13 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 25 Apr 2021 21:00:05 GMT
+      - Tue, 27 Jul 2021 10:35:00 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Set-Cookie:
-      - __cfduid=d149d8ca56a19f6c26a1766e21aa63e601619384405; expires=Tue, 25-May-21
-        21:00:05 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=62045a97-c81b-4006-b48d-06245ff9860c; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:46:45 GMT; Secure
       X-Dns-Prefetch-Control:
       - 'off'
       X-Frame-Options:
@@ -54,19 +51,21 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
@@ -75,19 +74,21 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
@@ -96,41 +97,44 @@ http_interactions:
       - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
         https://apis.google.com https://api.amplitude.com https://widget.intercom.io
         https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+        https://analytics.pgncs.notion.so https://o324374.ingest.sentry.io https://checkout.stripe.com
+        https://js.stripe.com https://embed.typeform.com https://admin.typeform.com
+        https://public.profitwell.com js.sentry-cdn.com https://platform.twitter.com
         https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
         connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
         ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
         https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
         https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
         https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+        https://api.segment.io https://api.pgncs.notion.so https://o324374.ingest.sentry.io
+        https://checkout.stripe.com https://js.stripe.com https://cdn.contentful.com
+        https://preview.contentful.com https://images.ctfassets.net https://www2.profitwell.com
+        https://api.unsplash.com https://boards-api.greenhouse.io; font-src ''self''
+        data: https://cdnjs.cloudflare.com https://js.intercomcdn.com; img-src ''self''
+        data: blob: https: https://platform.twitter.com https://syndication.twitter.com
         https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
         ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
         media-src https: http:'
+      Set-Cookie:
+      - notion_browser_id=f99aa1f5-ccb0-470c-bd6c-88df72efa0ff; Domain=www.notion.so;
+        Path=/; Expires=Fri, 04 Apr 2053 12:21:40 GMT; Secure
       Etag:
-      - W/"214-mT9zVEe+bYGHGQTI/05P3uHwVOk"
+      - W/"29f-c/my+Rhp7UJlgvokEWEpPC81fSM"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
       - DYNAMIC
-      Cf-Request-Id:
-      - '09ac6e24610000694899ae0000000001'
       Expect-Ct:
       - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
       Server:
       - cloudflare
       Cf-Ray:
-      - 645a7fb3c9c46948-CDG
+      - 675537ebed7dfbe8-KIX
     body:
       encoding: UTF-8
-      string: '{"object":"page","id":"723578f1-6e51-450c-8ee1-09158c19fd4c","created_time":"2021-01-29T20:50:51.917Z","last_edited_time":"2021-04-25T21:00:05.696Z","parent":{"type":"database_id","database_id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c"},"archived":false,"properties":{"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"A
+      string: '{"object":"page","id":"2de466f0-9861-466b-9bc2-c987965da010","created_time":"2021-07-26T15:05:00.000Z","last_edited_time":"2021-07-27T10:35:00.000Z","parent":{"type":"database_id","database_id":"ab7e7b22-7793-492a-ba6b-3295f8b19341"},"archived":false,"properties":{"Description":{"id":"ddNO","type":"rich_text","rich_text":[]},"Name":{"id":"title","type":"title","title":[{"type":"text","text":{"content":"A
         Notion page","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        Notion page","href":null}]}}}'
-  recorded_at: Sun, 25 Apr 2021 21:00:05 GMT
+        Notion page","href":null}]}},"url":"https://www.notion.so/A-Notion-page-2de466f09861466b9bc2c987965da010"}'
+  recorded_at: Tue, 27 Jul 2021 10:35:00 GMT
 recorded_with: VCR 6.0.0
